kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: production
  labels:
    app: authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - image: bstijnb/authentication-service
          imagePullPolicy: IfNotPresent
          name: authentication-service
          ports: 
            - containerPort: 80
